# TaskList

./: README.md
TaskList/: CMakeLists.txt  README.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
TaskManager/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
